Few suggested improvements added